Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ stages:
       displayName: 'Use Python $(pythonVersion)'    
 
     - script: |
+        export PATH=$HOME/.local/bin:$PATH
         python -m venv antenv
         source antenv/bin/activate
         python -m pip install --upgrade pip
