--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ stages:
       displayName: "Install requirements"
 
     - script: |
+        echo $PATH
         python -m venv antenv
         source antenv/bin/activate
         # make lint
@@ -55,6 +56,7 @@ stages:
         archiveType: zip
         archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
         replaceExistingArchive: true
+        verbose: true
 
     - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
       displayName: 'Upload package'
