Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ stages:
             displayName: 'Use Python version'
 
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App : udacity-flask'
+            displayName: 'Deploy Azure Web App : helloflask'
             inputs:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
